--- a/tropical_traverse/package.json
+++ b/tropical_traverse/package.json
@@ -12,7 +12,8 @@
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/node": "^20",
