--- a/tropical_traverse/package.json
+++ b/tropical_traverse/package.json
@@ -10,6 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.344.0",
