--- a/tropical_traverse/package.json
+++ b/tropical_traverse/package.json
@@ -8,7 +8,6 @@
     "build": "next build",
     "start": "PORT=31600 next start",
     "lint": "next lint"
-    
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -17,9 +16,10 @@
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "file-loader": "^6.2.0",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.2.1",
-    "next": "^14.1.0",
+    "next": "^14.2.2",
     "node.js": "^0.0.1-security",
     "react": "^18",
     "react-dom": "^18.2.0",
