--- a/tropical_traverse/package.json
+++ b/tropical_traverse/package.json
@@ -8,7 +8,6 @@
     "build": "next build",
     "start": "PORT=31600 next start",
     "lint": "next lint"
-    
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -16,9 +15,12 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "lucide-react": "^0.344.0",
-    "mongoose": "^8.2.1",
+    "mongoose": "^8.3.2",
+    "mui": "^0.0.1",
     "next": "^14.1.0",
     "node.js": "^0.0.1-security",
     "react": "^18",
