--- a/tropical_traverse/src/app/server/config.env
+++ b/tropical_traverse/src/app/server/config.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://willi44c:tropical_traverse@cluster0.sgw9ryn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://willi44c:tropical_traverse@cluster0.sgw9ryn.mongodb.net/Tropical_Traverse
