--- a/tropical_traverse/package.json
+++ b/tropical_traverse/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.344.0",
     "mongoose": "^8.2.1",
     "next": "^14.2.2",
+    "node": "^18.20.2",
     "node.js": "^0.0.1-security",
     "react": "^18",
     "react-dom": "^18.2.0",
