--- a/tropical_traverse/package.json
+++ b/tropical_traverse/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.3.2",
     "mui": "^0.0.1",
@@ -25,6 +27,7 @@
     "node.js": "^0.0.1-security",
     "react": "^18",
     "react-date-picker": "^10.6.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
